--- a/app/views/compromises/_form.html.erb
+++ b/app/views/compromises/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :fecha_inicial %><br>
-    <%= f.date_select :fecha_inicial %>
+    <%= f.date_select :fecha_inicial ,{ start_year: Date.current.year,end_year: Date.current.year+10, use_month_names: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre','Diciembre']}%>
   </div>
   <div class="field">
     <%= f.label :correo %><br>
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :fecha_limite %><br>
-    <%= f.date_select :fecha_limite %>
+    <%= f.date_select :fecha_limite ,{ start_year: Date.current.year,end_year: Date.current.year+10, use_month_names: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre','Diciembre']}%>
   </div>
   <div class="field">
     <%= f.label :compromisos %><br>
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :stakeholder_id %><br>
-    <%= f.text_field :stakeholder_id %>
+    <%= collection_select(:compromise, :stakeholder_id, current_user.empresa.stakeholders.all.uniq!, :id, :nombre_completo,{prompt: 'Seleciona el stakeholder'} , required: '')%>
   </div>
   <div class="actions">
     <%= f.submit %>
