--- a/app/views/empresas/index.html.erb
+++ b/app/views/empresas/index.html.erb
@@ -1,20 +1,14 @@
-<h1>Listing empresas</h1>
+<h1>Empresas</h1>
 
 <table>
   <thead>
     <tr>
+      <th>Imagen</th>
       <th>Nombre comercial</th>
       <th>Razon social</th>
       <th>Nit</th>
       <th>Representante legal</th>
-      <th>Nombre contacto</th>
-      <th>Email contacto</th>
-      <th>Telefono contacto</th>
-      <th>Direccion contacto</th>
-      <th>Ciudad</th>
-      <th>Pais</th>
-      <th>Pagina web</th>
-      <th>Imagen</th>
+      <th>Creado</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,21 +16,15 @@
   <tbody>
     <% @empresas.each do |empresa| %>
       <tr>
+        <td><%= image_tag empresa.imagen_url , class: 'imagen' %></td>
         <td><%= empresa.nombre_comercial %></td>
         <td><%= empresa.razon_social %></td>
         <td><%= empresa.nit %></td>
         <td><%= empresa.representante_legal %></td>
-        <td><%= empresa.nombre_contacto %></td>
-        <td><%= empresa.email_contacto %></td>
-        <td><%= empresa.telefono_contacto %></td>
-        <td><%= empresa.direccion_contacto %></td>
-        <td><%= empresa.ciudad %></td>
-        <td><%= empresa.pais %></td>
-        <td><%= empresa.pagina_web %></td>
-        <td><%= image_tag empresa.imagen_url , class: 'imagen' %></td>
-        <td><%= link_to 'Show', empresa %></td>
-        <td><%= link_to 'Edit', edit_empresa_path(empresa) %></td>
-        <td><%= link_to 'Destroy', empresa, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= empresa.created_at.to_s %></td>
+        <td><%= link_to 'Ver', empresa %></td>
+        <td><%= link_to 'Editar', edit_empresa_path(empresa) %></td>
+        <td><%= link_to 'Eliminar', empresa, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -44,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Empresa', new_empresa_path %>
+<%= link_to 'Nueva Empresa', new_empresa_path %>
