--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -5,9 +5,8 @@
     <tr>
       <th>Tema</th>
       <th>Informacion</th>
-      <th>Imagen</th>
       <th>Stakeholder</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -16,8 +15,8 @@
       <tr>
         <td><%= interest.tema %></td>
         <td><%= interest.informacion %></td>
-        <td><%= image_tag interest.imagen_url, class: 'imagen' %></td>
         <td><%= interest.stakeholder.nombre %></td>
+        <td><%= link_to 'Archivo', interest.imagen_url  %></td>
         <td><%= link_to 'Show', interest %></td>
         <td><%= link_to 'Edit', edit_interest_path(interest) %></td>
         <td><%= link_to 'Destroy', interest, method: :delete, data: { confirm: 'Are you sure?' } %></td>
