--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -7,7 +7,7 @@
 			= link_to 'administracion tipos de entidad', entities_path
 	-if current_user.isAdmin? or current_user.isSuperAdmin?
 		%li
-			= link_to 'administracion usuarios', 'users/index'
+			= link_to 'administracion usuarios', usuarios_index_path
 	%li
 		= link_to 'administracion stakeholders', stakeholders_path
 	%li
@@ -21,5 +21,5 @@
 	%li
 		= link_to 'administracion Cambiar Contraseña', '#'
 	%li
-		= link_to 'administracion salir', destroy_user_session_path, method: :delete 
+		= link_to 'administracion salir', destroy_user_session_path, method: :delete
 
