--- a/app/views/usuarios/_form.html.haml
+++ b/app/views/usuarios/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@user) do |f| 
+= form_for @user, url: usuarios_path, html: { method: :post } do |f|
   .field
     = f.label :email
     = f.text_field :email
