modificacion modelo empresa

--- a/app/views/stakeholders/_form.html.erb
+++ b/app/views/stakeholders/_form.html.erb
@@ -80,9 +80,13 @@
     <%= f.text_field :necesidades_afiliacion %>
   </div>
   <div class="field">
+    <%= f.label :entidad %><br>
+    <%= f.text_field :entidad %>
+  </div>
+  <div class="field">
     <%= f.label :empresa_id %><br>
     <%= f.text_field :empresa_id %>
-  </div>
+  </div>  
   <div class="actions">
     <%= f.submit %>
   </div>
