--- a/app/views/usuarios/index.html.haml
+++ b/app/views/usuarios/index.html.haml
@@ -15,6 +15,8 @@
 			%th
 				Rol
 			%th
+				Ver
+			%th
 				Editar
 			%th
 				Borrar
@@ -32,6 +34,8 @@
 						= user.cargo
 					%td
 						= user.rol
+					%td
+						= link_to 'PDF', '/usuarios/'+user.id.to_s+'.pdf' , target: '_blank'
 					%td
 						= link_to 'Editar', usuarios_edit_path(user)
 					%td
