--- a/app/views/compromises/edit.html.erb
+++ b/app/views/compromises/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing compromise</h1>
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">EDITANDO UN COMPROMISO</h4>
+	</div>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @compromise %> |
-<%= link_to 'Back', compromises_path %>
