--- a/app/views/empresas/index.html.erb
+++ b/app/views/empresas/index.html.erb
@@ -32,6 +32,6 @@
 
 <br>
 
-<%= link_to 'Nueva Empresa', new_empresa_path %>
+<%= link_to (image_tag 'crear_nuevo2.png'), new_empresa_path %>
 <br>
 <%= link_to 'PDF' , '/empresas.pdf' , target: "_blank" %>
