--- a/app/views/mettings/index.html.erb
+++ b/app/views/mettings/index.html.erb
@@ -30,6 +30,6 @@
 
 <br>
 
-<%= link_to 'New Metting', new_metting_path %>
+<%= link_to (image_tag 'crear_nuevo2.png'), new_metting_path %>
 <br>
 <%= link_to 'Pdf', '/mettings.pdf', target: '_blank' %>
