--- a/app/views/stakeholders/index.html.erb
+++ b/app/views/stakeholders/index.html.erb
@@ -36,6 +36,6 @@
 
 <br>
 
-<%= link_to 'New Stakeholder', new_stakeholder_path %>
+<%= link_to (image_tag 'crear_nuevo2.png'), new_stakeholder_path %>
 
 
