--- a/app/views/usuarios/index.html.haml
+++ b/app/views/usuarios/index.html.haml
@@ -42,4 +42,4 @@
 						= link_to 'Borrar', user.id.to_s, method: :delete, data: { confirm: 'Are you sure?' }
 
 
-= link_to 'Agregar nuevo', usuarios_new_path
+= link_to (image_tag 'crear_nuevo2.png') , usuarios_new_path
