--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -27,6 +27,6 @@
 
 <br>
 
-<%= link_to 'New Interest', new_interest_path %>
+<%= link_to (image_tag 'crear_nuevo2.png'), new_interest_path %>
 <br>
 <%= link_to 'PDF', '/interests.pdf', target: '_blank' %>
