--- a/app/views/temasregulatorios/index.html.erb
+++ b/app/views/temasregulatorios/index.html.erb
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Temasregulatorio', new_temasregulatorio_path %>
+<%= link_to (image_tag 'crear_nuevo2.png'), new_temasregulatorio_path %>
