--- a/app/views/compromises/_form.html.erb
+++ b/app/views/compromises/_form.html.erb
@@ -40,7 +40,9 @@
   
   <div class="row">
     <div class="large-12 column">
-      <%= f.label :compromisos %><br>
+      <div class="titulo-editar text-center">
+        <h5 class="blanco">Compromisos</h5>
+      </div>
       <%= text_area( :compromise , :compromisos , size: "10x10") %>
     </div>
   </div>  
