--- a/app/views/compromises/index.html.erb
+++ b/app/views/compromises/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 <hr class="linea">
 <table id="buscar" cellspacing="0" width="100%">
-  <thead>
+  <thead class="head-tabla">
     <tr>
       <th>Fecha inicial</th>
       <th>Correo</th>
@@ -44,9 +44,11 @@
 
 
 <br>
-
-
 <br>
+<br>
+<br>
+
+<hr class="linea">
 
 
 <script type="text/javascript" >
