--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -38,6 +38,19 @@ body{
 	height: 200px;
 }
 
+.imagen_empresa{
+	width: 100%;
+	height: 245px;
+	padding: 20px;
+
+	.abrir_menu{
+		cursor: pointer;
+	}
+
+}
+
+
+
 
 /*Table*/
 .dataTables_info{
@@ -61,4 +74,36 @@ body{
 	background:#639cc6;
 	padding: 10px 0;
 	color: white;
+}
+
+/*Menu*/
+
+.menu_general{
+	position: absolute;
+	top: 0;
+	background: rgba(51,51,51,0.9);
+	padding: 20px;
+	height: 100%;
+	z-index: 10;
+	overflow: auto;
+	display: none;
+
+
+	.cerrar_menu{
+		cursor: pointer;
+	}
+}
+
+#lista_menu{
+	list-style: none;
+	margin: 10px 0 0 0;
+
+	li{ 
+		padding: 10px 0;
+		border-bottom: 1px white solid;
+
+		a{
+			color: white;
+		}
+	}
 }
