--- a/app/assets/stylesheets/empresas.css.scss
+++ b/app/assets/stylesheets/empresas.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the empresas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.roundLabel{
+	border-radius: 50%;
+	width: 200px;
+	height: 200px;
+}
