--- a/app/views/empresas/edit.html.erb
+++ b/app/views/empresas/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editando empresa</h1>
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">EDITANDO EMPRESA</h4>
+	</div>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @empresa %> |
-<%= link_to 'Back', empresas_path %>
