--- a/app/views/empresas/index.html.erb
+++ b/app/views/empresas/index.html.erb
@@ -1,7 +1,20 @@
-<h1>Empresas</h1>
+<div class="row">
+  <div class="large-6 column">
+    <h2 class="azul">
+      EMPRESAS
+    </h2>      
+  </div>
+  <div class="large-6 column text-right">
+    <%= link_to (image_tag 'crear_nuevo2.png'), new_empresa_path %>
+    &nbsp;&nbsp;&nbsp;
+    <%= link_to (image_tag 'imprimir2.png'), '/empresas.pdf' , target: '_blank'%>
+    
+  </div>
+</div>
+<hr class="linea">
 
-<table>
-  <thead>
+<table id="buscar" cellspacing="0" width="100%">
+  <thead class="head-tabla">
     <tr>
       <th>Imagen</th>
       <th>Nombre comercial</th>
@@ -9,7 +22,9 @@
       <th>Nit</th>
       <th>Representante legal</th>
       <th>Creado</th>
-      <th colspan="3"></th>
+      <th>PDF</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
     </tr>
   </thead>
 
@@ -29,9 +44,18 @@
     <% end %>
   </tbody>
 </table>
-
+<br>
+<br>
+<br>
 <br>
 
-<%= link_to (image_tag 'crear_nuevo2.png'), new_empresa_path %>
-<br>
-<%= link_to 'PDF' , '/empresas.pdf' , target: "_blank" %>
+<hr class="linea">
+
+<script type="text/javascript" >
+  $(document).ready(function(){
+    $('#buscar').dataTable({
+      "paging":   false,
+        "info":     false
+    });
+  });
+</script>
