--- a/app/views/empresas/new.html.erb
+++ b/app/views/empresas/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New empresa</h1>
-
+<div class="row">
+	<div class="large-12 column">
+		<h4 class="text-center">CREANDO UNA EMPRESA</h4>
+	</div>
+</div>
+<br>
 <%= render 'form' %>
-
-<%= link_to 'Back', empresas_path %>
