Cambios menores en vista de temas de interes

--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -32,77 +32,77 @@
     <div class="large-5 columns">
       <%= f.label :nombre_comercial %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
       <%= f.text_field :nombre_comercial %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :razon_social %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :razon_social %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :nit %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :nit %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :representante_legal %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :representante_legal %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :nombre_contacto %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :nombre_contacto %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :email_contacto %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :email_contacto %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :telefono_contacto %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :telefono_contacto %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :direccion_contacto %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :direccion_contacto %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :ciudad %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :ciudad %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :pais %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :pais %>
     </div>
 
     <div class="large-5 columns">
       <%= f.label :pagina_web %>
     </div>
-    <div class="large-7 columns field">
+    <div class="large-7 columns fieldEmpresas">
        <%= f.text_field :pagina_web %>
     </div>
 
