--- a/app/assets/stylesheets/empresas.css.scss
+++ b/app/assets/stylesheets/empresas.css.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.fieldEmpresas{
+	/*height:40px;*/
+}
+
 .roundLabel{
 	border-radius: 50%;
 	width: 200px;
