--- a/app/views/empresas/_form.html.erb
+++ b/app/views/empresas/_form.html.erb
@@ -114,6 +114,7 @@
   <div class="row">
     <div class="large-12 column text-center">
       <%= link_to 'Atras', empresas_path ,class: 'button verde-bg'  %>
+      &nbsp;
       <%= f.submit 'Guardar' , class: 'button verde-bg' %>  
     </div>
   </div>
